--- a/P014DD194.opf/layers/v047/Pagination.yml
+++ b/P014DD194.opf/layers/v047/Pagination.yml
@@ -1,19 +1,20 @@
-id: ce005e48eb014de9b1eed771e1805666
+id: b6c1e339062c4c1fa9e25e472c93e92d
 annotation_type: Pagination
 revision: '00001'
 annotations:
-  6c93a988ebc64b37b12850f3fd00df35:
+  6288cf7af54644f2aac187257e6598d1:
     imgnum: 1345
     reference: ''
     span:
       start: 0
-      end: 778
-  93e3325ab032497d8d1c89923dc80057:
+      end: 780
+    note_ref: e678192dae474c859c410587762519d9
+  e678192dae474c859c410587762519d9:
     imgnum: 1346
     reference: ''
     span:
-      start: 781
-      end: 1299
+      start: 783
+      end: 1301
 local_ids:
-  6c93a988ebc64b37b12850f3fd00df35: 200000
-  93e3325ab032497d8d1c89923dc80057: 200001
+  6288cf7af54644f2aac187257e6598d1: 200000
+  e678192dae474c859c410587762519d9: 200001
