--- a/P014DD194.opf/meta.yml
+++ b/P014DD194.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     c059505a3c3f4707bf22b5a5644cd256:
       base_file: v047.txt
       image_group_id: I1PD95892
-      title: ''
+      title: རྟེན་འབྲེལ་སྙིང་པོའི་སྔགས་ཐེམ་ཞིབ་མོར་བཀོད་པ།
       total_pages: 1464
       volume_number: 47
