--- a/DB9A733B3.opf/index.yml
+++ b/DB9A733B3.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   580549d2807043aba83acfe9292e717c:
     parts: {}
+    work_id: N3814
     span:
-    - vol: 47
+    - base: 01db
       start: 0
       end: 1298
-    work_id: N3814
